--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.env
 node_modules
 dist
 dist-ssr
 *.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +20,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env.test
+# Environment variables
+.env
+.env.*
+supabase/.env
